# langchain_docs_rag

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  PLAN.MD  README.md  bootstrap_migration.py  docker-compose.yml  main.py  pyproject.toml  response.json
.github/workflows/: ci.yml  deploy.yml  generate-eval-dataset.yml  openwiki-update.yml
docs/: docker.md  evaluation_and_observability_guide.md  latency_optimization_guide.md  phase1_ingestion_interview_prep.md
docs/adr/: 0001-manifest-crawler-sqs-fanout.md  0002-decouple-ingestion-dependencies.md
infra/: Pulumi.dev.yaml  README.md  __main__.py  requirements.txt
openwiki/: .last-update.json  _plan.md  index.md  quickstart.md
openwiki/architecture/: index.md  overview.md
openwiki/deployment/: github-actions.md  iac.md  index.md
openwiki/services/: api.md  index.md  ingestion.md
services/api-service/: Dockerfile  pyproject.toml
services/api-service/src/: main.py
services/api-service/src/api/: config.py  exceptions.py  main.py  middleware.py  router.py
services/api-service/src/api/routes/: health.py
services/api-service/src/api/v1/: chat.py  embeddings.py  retrieval.py
services/api-service/tests/: test_api_config.py  test_chat.py  test_embed_endpoint.py  test_main.py  test_retrieval.py
services/evaluation-service/: pyproject.toml  test_s3.py
services/evaluation-service/src/: config.py  generate_testset.py  run_evals.py
services/evaluation-service/src/metrics/: generation.py  retrieval.py
services/indexer-service/: build.sh  pyproject.toml
services/indexer-service/src/indexer/: chunker.py  crawler.py  custom_splitters.py  lambda_handler.py  manifest_crawler.py  parser.py  storage.py
services/indexer-service/tests/: run_crawler_local.py  run_worker_local.py  test_chunker.py  test_crawler.py  test_custom_splitters.py  test_lambda_handler.py  test_manifest_crawler.py  test_parser.py  test_storage.py
shared-lib/: pyproject.toml
shared-lib/src/rag_shared/: __init__.py  config.py  embeddings.py  llm.py  reranker.py
shared-lib/src/shared/: __init__.py  config.py  embeddings.py
shared-lib/tests/: test_config.py  test_embeddings.py  test_llm.py  test_real_embedder.py
