[project]
name = "week3-rag-aws"
version = "0.1.0"
description = "Production-style RAG Platform Monorepo"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "shared-lib",
    "services/api-service",
    "services/indexer-service",
    "services/evaluation-service",
]