[project]
name = "shared-lib"
version = "0.1.0"
description = "Shared RAG Utilities"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.34",
    "qdrant-client>=1.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_shared"]
