[project]
name = "api-service"
version = "0.1.0"
description = "FastAPI RAG API Service"
requires-python = ">=3.12"
dependencies = [
    "shared-lib",
    "fastapi",
    "uvicorn"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.uv.sources]
shared-lib = { workspace = true }
