[project]
name = "evaluation-service"
version = "0.1.0"
description = "RAG Evaluation Service"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.34",
    "langchain-aws>=1.6.2",
    "langchain-google-genai>=4.2.7",
    "langfuse>=4.14.0",
    "pandas>=3.0.3",
    "ragas>=0.4.3",
    "ranx>=0.3.21",
    "rapidfuzz>=3.14.5",
    "shared-lib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
shared-lib = { workspace = true }
