[project]
name = "indexer-service"
version = "0.1.0"
description = "Document Indexer Service"
requires-python = ">=3.12"
dependencies = [
    "shared-lib",
    "urllib3>=2.2.0",
    "fastembed>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/indexer"]

[tool.uv.sources]
shared-lib = { workspace = true }
